fix: fixed layout issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -351,3 +351,75 @@
   background: hsla(0, 0%, 0%, 0.06);
   border-radius: 10px;
 }
+
+.marker {
+  background-color: #db2828;
+  height: 0.5em;
+  width: 0.5em;
+  border-radius: 50%;
+  animation: grow 0.4s 1 linear;
+  transform: translateX(-50%) translateY(-50%);
+  position: relative;
+}
+
+.marker:before {
+  position: absolute;
+  content: "";
+  height: 0.5em;
+  width: 0.5em;
+  left: 0;
+  top: 0;
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow: 0px 0px 2px 2px #db2828;
+  animation: pulse 2s infinite ease-out;
+}
+
+/* Radar pulse effect */
+.marker:after {
+  position: absolute;
+  content: "";
+  height: 0.5em;
+  width: 0.5em;
+  left: 0;
+  top: 0;
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow: 0px 0px 0px 0px rgba(219, 40, 40, 0.7);
+  animation: radar 2s infinite ease-out;
+}
+
+@keyframes grow {
+  0% {
+    transform: translateX(-50%) translateY(-50%) scale(0.1);
+  }
+  100% {
+    transform: translateX(-50%) translateY(-50%) scale(1);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  70% {
+    transform: scale(2.5);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scale(3);
+    opacity: 0;
+  }
+}
+
+@keyframes radar {
+  0% {
+    box-shadow: 0px 0px 0px 0px rgba(219, 40, 40, 0.7);
+    transform: scale(1);
+  }
+  100% {
+    box-shadow: 0px 0px 0px 10px rgba(219, 40, 40, 0);
+    transform: scale(1);
+  }
+}
